# smartnodes-dagrd

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: deploy-pages.yml
data/raw/la_palmera/: raw_InclinometroLaPalmera.txt
data/raw/santa_rita_1/: raw_InclinometroSantaRita1.txt
docs/: ARCHITECTURE.md
notebooks/: inc_smartnode_la_palmera_drift_corr.ipynb  inc_smartnode_sta_rita_1_drift_corr.ipynb
scripts/: build_site.py
site/: index.html
site/assets/: styles.css
site/tables/: summary.json
site/tables/la_palmera/: availability.csv  latest_displacement.csv  summary.json
site/tables/santa_rita_1/: availability.csv  latest_displacement.csv  summary.json
src/sn_dagrd/: __init__.py  drift_correction.py  inclinometer_io.py  inclinometer_kinematics.py  inclinometer_plotting.py
tests/: test_package_smoke.py
